--- a/src/Pages/Home/Banner/Banner.scss
+++ b/src/Pages/Home/Banner/Banner.scss
@@ -1,16 +1,130 @@
-.banner{
+.banner {
     position: relative;
-    &__container{
+    background: #F7F7F7;
+
+    &__container {
         height: 475px;
+
+        .heart {
+            width: 759.51px;
+            height: 479.58px;
+            position: absolute;
+            top: -20px;
+            left: 148px;
+        }
+
+        .sloy2 {
+            width: 29px;
+            height: 22px;
+            position: absolute;
+            top: 220px;
+            left: 590px;
+        }
+
+        .layer23 {
+            width: 33.75px;
+            height: 41.08px;
+            position: absolute;
+            top: 160px;
+            left: 635px;
+        }
+
+        .fon3 {
+            width: 74px;
+            height: 78px;
+            position: absolute;
+            top: 60px;
+            left: 585px;
+        }
+
+        .fon5 {
+            width: 74px;
+            height: 78px;
+            position: absolute;
+            top: 260px;
+            left: 555px;
+        }
+
+        .fon2 {
+            width: 62px;
+            height: 62px;
+            position: absolute;
+            top: 310px;
+            left: 255px;
+        }
+
+        .fon {
+            width: 62px;
+            height: 62px;
+            position: absolute;
+            top: 249px;
+            left: 210px;
+        }
+
+        .sloy10 {
+            width: 21.28px;
+            height: 31.45px;
+            position: absolute;
+            top: 311.39px;
+            left: 335.27px;
+        }
+        .ellipse4{
+            width: 200px;
+            height: 200px;
+            position: absolute;
+            top: 255px;
+            right: 45px;
+        }
+        .ellipse3 {
+            width: 274px;
+            height: 274px;
+            position: absolute;
+            top: 125px;
+            right: 0;
+        }
+
+        .ellipse5 {
+            width: 251px;
+            height: 251px;
+            position: absolute;
+            top: 55px;
+            left: 1268px;
+        }
+
+        .fon6 {
+            width: 79px;
+            height: 79px;
+            position: absolute;
+            top: 220px;
+            left: 129px;
+        }
+
+        .sloy41 {
+            width: 23px;
+            height: 29px;
+            position: absolute;
+            top: 178px;
+            left: 160px;
+        }
+
+        .fon41 {
+            width: 71px;
+            height: 69.96px;
+            position: absolute;
+            top: 65px;
+        }
+
     }
-    &__text{
+
+    &__text {
         display: flex;
         flex-direction: column;
         align-items: center;
         position: absolute;
         right: 218px;
         top: 135px;
-        h2{
+
+        h2 {
             text-align: center;
             width: 431px;
             margin: 24px 0 13px;
@@ -18,7 +132,8 @@
             font-weight: 600;
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
-        p{
+
+        p {
             font-size: 18px;
             font-weight: 400;
             width: 499px;
