--- a/src/Layout/Header/HeaderPartTwo/HeaderPartTwo.scss
+++ b/src/Layout/Header/HeaderPartTwo/HeaderPartTwo.scss
@@ -9,6 +9,7 @@
             height: 160px;
             text-transform: uppercase;
             font-weight: 400;
+            font-size: 15px;
             .percent{
                 display: inline-block;
                 text-align: center;
