--- a/src/Pages/Home/Popular/Popular.scss
+++ b/src/Pages/Home/Popular/Popular.scss
@@ -3,11 +3,7 @@
     padding: 2rem 0;
     background-color: #f9f9f9;
   
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 0 1rem;
-    }
+  
   
     h2 {
       font-size: 2rem;
@@ -80,14 +76,14 @@
         font-size: 1rem;
         font-weight: bold;
         color: #fff;
-        background-color: #007bff;
+        background-color: #e7426a;
         border: none;
         border-radius: 4px;
         cursor: pointer;
         transition: background-color 0.3s ease;
   
         &:hover {
-          background-color: #0056b3;
+          background-color: #e52354;
         }
       }
     }
