--- a/src/Pages/OneItem/OneItem.scss
+++ b/src/Pages/OneItem/OneItem.scss
@@ -1,83 +1,127 @@
-.oneItem{
-    &__container{
+.oneItem {
+    &__navigate {
+        max-width: 1170px;
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        font-size: 16px;
+        margin-bottom: 20px;
+
+        p {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            align-items: center;
+        }
+
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+
+        svg {
+            margin: 0 10px;
+            color: #6c757d;
+        }
+    }
+
+    &__container {
         display: flex;
         justify-content: space-around;
         background: #F7F7F7;
         padding: 50px 0;
-        img.oneImg{
+
+        img.oneImg {
             width: 570px;
             height: 450px;
         }
-        &__block{
-            .oneTitle{
+
+        &__block {
+            .oneTitle {
                 font-weight: 600;
-                font-size: 50px;
+                font-size: 40px;
                 color: #292929;
             }
         }
     }
-    &__block{
-        .oneTitle{
+
+    &__block {
+        .oneTitle {
             font-weight: 600;
             font-size: 50px;
             color: #292929;
         }
-        &__compound{
+
+        &__compound {
             width: 570px;
             height: 156px;
             padding: 28px;
             background: white;
             border: 1px solid #EDEDF0;
-            h4{
+
+            h4 {
                 font-weight: 600;
                 font-size: 22px;
             }
-            p{
+
+            p {
                 font-size: 17px;
                 font-weight: 400;
                 line-height: 22px;
                 color: #353535;
             }
         }
-        &__description{
+
+        &__description {
             width: 570px;
             background: white;
             margin-top: 10px;
             border: 1px solid #EDEDF0;
             padding: 27px;
-            h4{
+
+            h4 {
                 font-weight: 600;
                 font-size: 22px;
             }
-            p{
+
+            p {
                 font-size: 17px;
                 font-weight: 400;
                 line-height: 22px;
                 color: #353535;
             }
         }
-        &__buy{
-            display: flex;justify-content: space-between;
+
+        &__buy {
+            display: flex;
+            justify-content: space-between;
             width: 570px;
             height: 80px;
             padding: 15px 28px;
             background: white;
             border: 1px solid #EDEDF0;
             margin-top: 10px;
-            &__price{
+
+            &__price {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+
                 .original-price {
                     text-decoration: line-through;
                     color: grey;
                 }
+
                 .discounted-price {
                     color: #E7426A;
                     font-weight: bold;
                     font-size: 24px;
                     font-weight: 600;
                 }
+
                 .final-price {
                     color: #E7426A;
                     font-weight: bold;
@@ -85,13 +129,14 @@
                     font-weight: 600;
                 }
             }
-            button{
+
+            button {
                 width: 178px;
                 height: 50px;
                 background: #E7426A;
                 color: white;
                 font-size: 18px;
-                font-weight: 60;
+                font-weight: 600;
                 display: flex;
                 align-items: center;
                 justify-content: center;
