--- a/src/Pages/OneItem/OneItem.scss
+++ b/src/Pages/OneItem/OneItem.scss
@@ -104,7 +104,9 @@
             background: white;
             border: 1px solid #EDEDF0;
             margin-top: 10px;
-
+            a{
+                text-decoration: none;
+            }
             &__price {
                 display: flex;
                 flex-direction: column;
