popular and onecard

--- a/src/Pages/OneItem/OneItem.scss
+++ b/src/Pages/OneItem/OneItem.scss
@@ -57,7 +57,7 @@
 
         &__compound {
             width: 570px;
-            height: 156px;
+            height: 156px auto;
             padding: 28px;
             background: white;
             border: 1px solid #EDEDF0;
