--- a/src/Pages/Home/Popular/Popular.scss
+++ b/src/Pages/Home/Popular/Popular.scss
@@ -2,9 +2,7 @@
   padding: 2rem 0;
   background-color: #f9f9f9;
 
-
-
-  .popular-text{
+  .popular-text {
     font-size: 2rem;
     margin-bottom: 1.5rem;
     text-align: center;
@@ -59,6 +57,10 @@
         color: #333;
         margin-bottom: 1rem;
 
+        &.no-sale {
+          justify-content: center;
+        }
+
         .original-price {
           text-decoration: line-through;
           color: #999;
@@ -66,6 +68,7 @@
 
         .discounted-price {
           font-weight: bold;
+          color: #e7426a;
         }
       }
 
