--- a/src/Layout/Header/HeaderPartTwo/HeaderPartTwo.scss
+++ b/src/Layout/Header/HeaderPartTwo/HeaderPartTwo.scss
@@ -2,25 +2,104 @@
     &__container {
         ul {
             display: flex;
-            display: flex;
             justify-content: center;
             align-items: center;
-            gap: 30px;
-            height: 160px;
+            gap: 2rem; 
+            height: 10rem; 
             text-transform: uppercase;
             font-weight: 400;
-            font-size: 15px;
-            .percent{
+            font-size: 1rem; 
+            list-style: none; 
+            padding: 0; 
+
+            li {
+                position: relative;
+                margin: 0;
+                padding: 0.5rem 0; 
+                
+
+                &:not(:nth-child(3)):not(:nth-child(5)) {
+                    cursor: pointer;
+
+                    &::after {
+                        content: '';
+                        position: absolute;
+                        left: 0;
+                        bottom: -0.5rem; 
+                        width: 100%;
+                        height: 0.2rem; 
+                        background-color: #e7426a;
+                        transform: scaleX(0); 
+                        transform-origin: left; 
+                        transition: transform 0.3s ease; 
+                    }
+
+                    &:hover::after {
+                        transform: scaleX(1); 
+                    }
+                }
+
+               
+                &.logo {
+                    &::after {
+                        display: none;
+                    }
+                }
+
+              
+                &.catalog {
+                    &::after {
+                        display: none;
+                    }
+                }
+            }
+
+            .percent {
                 display: inline-block;
                 text-align: center;
-                line-height: 24px;
-                margin-left: 5px;
-                width: 24px;
-                height: 24px;
-                font-size: 15px;
+                line-height: 1.5rem; 
+                margin-left: 0.5rem; 
+                width: 1.5rem; 
+                height: 1.5rem; 
+                font-size: 1rem; 
                 color: white;
                 border-radius: 50%;
                 background: #E7426A;
+            }
+
+            .no-underline {
+                text-decoration: none;
+                color: black; 
+            }
+        }
+    }
+}
+
+
+@media (max-width: 770px) {
+    .headerTwo {
+        display: none;
+    }
+}
+
+
+@media (max-width: 768px) {
+    .headerTwo {
+        &__container {
+            ul {
+                flex-direction: column; 
+                gap: 1rem; 
+            }
+        }
+    }
+}
+
+@media (max-width: 480px) {
+    .headerTwo {
+        &__container {
+            ul {
+                font-size: 0.875rem; 
+                height: auto; 
             }
         }
     }
