--- a/src/Layout/Header/HeaderPartTwo/HeaderPartTwo.scss
+++ b/src/Layout/Header/HeaderPartTwo/HeaderPartTwo.scss
@@ -11,6 +11,9 @@
             font-size: 1rem; 
             list-style: none; 
             padding: 0; 
+            a{
+                text-decoration: none;
+            }
 
             li {
                 position: relative;
