--- a/src/Layout/Header/HeaderPartOne/HeaderPartOne.scss
+++ b/src/Layout/Header/HeaderPartOne/HeaderPartOne.scss
@@ -1,47 +1,59 @@
 .headerOne {
     background: #F7EBE5;
     font-weight: 400;
+    border-bottom: 1px solid #E5E5E5;
     &__container {
         display: flex;
         justify-content: space-between;
         align-items: center;
         height: 48px;
+        padding: 0 20px;
+    }
 
+    &__left {
         ul {
             display: flex;
-            gap: 14px;
+            gap: 20px;
+            margin: 0;
+            padding: 0;
+            list-style: none;
+            font-size: 14px;
+            color: #292929; 
         }
     }
 
     &__right {
         display: flex;
-
+        align-items: center; 
+        gap: 20px;
+        a{
+            text-decoration: none;
+        }
         .phoneImg {
-            width: 11px;
-            height: 18px;
-            margin-right: 11px;
-        }
-
-        .tgImg {
             width: 16px;
-            height: 14px;
+            height: 22px;
         }
 
-        .okImg {
-            width: 12.24px;
-            height: 16px;
+        .tgImg, .vkImg, .okImg {
+            width: 20px;
+            height: 20px;
+        }
+
+        .cart-container {
+            display: flex;
+            align-items: center;
+            gap: 10px;
         }
 
         .cartImg {
-            width: 14px;
-            height: 20px;
-            margin: 0 30px 0 35px;
+            width: 24px;
+            height: 24px;
         }
 
-        .vkImg {
-            width: 16.84px;
-            height: 14.61px;
-            margin: 0 10px 0;
+        .cart-text {
+            font-size: 12px;
+            color: #292929; 
+            
         }
     }
 }
