--- a/src/Pages/Sets/Sets.scss
+++ b/src/Pages/Sets/Sets.scss
@@ -6,7 +6,7 @@
         max-width: 1170px;
         margin: 0 auto;
         display: flex;
-        flex-direction: column; /* Изменено на column для стилизации */
+        flex-direction: column; 
         align-items: center;
         font-size: 16px;
         margin-bottom: 20px;
@@ -21,11 +21,11 @@
                 padding: 0;
                 display: flex;
                 align-items: center;
-                font-size: 16px; /* Вы можете настроить размер шрифта по необходимости */
-                color: #333; /* Вы можете настроить цвет шрифта по необходимости */
+                font-size: 16px; 
+                color: #333;
 
                 &:not(:last-child) {
-                    margin-right: 10px; /* Расстояние между текстами */
+                    margin-right: 10px;
                 }
             }
 
@@ -36,13 +36,13 @@
         }
 
         h2 {
-            font-size: 24px; /* Вы можете настроить размер заголовка по необходимости */
+            font-size: 24px; 
             margin: 0.5rem 0;
             color: #333;
         }
 
         p {
-            font-size: 16px; /* Вы можете настроить размер текста по необходимости */
+            font-size: 16px;
             color: #666;
         }
 
