--- a/src/Layout/Header/HeaderPartTwo/HeaderPartTwo.scss
+++ b/src/Layout/Header/HeaderPartTwo/HeaderPartTwo.scss
@@ -1,70 +1,56 @@
 .headerTwo {
+    a{
+        text-decoration: none;
+        position: relative;
+        color: inherit;
+        &::after {
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: -0.5rem; 
+            width: 100%;
+            height: 0.2rem; 
+            background-color: #e7426a;
+            transform: scaleX(0); 
+            transform-origin: left; 
+            transition: transform 0.3s ease; 
+        }
+    
+        &:hover::after {
+            transform: scaleX(1); 
+        }
+    }
     &__container {
+        button {
+            background: none;
+            border: none;
+            cursor: pointer;
+        }
+
         ul {
             display: flex;
             justify-content: center;
             align-items: center;
-            gap: 2rem; 
-            height: 10rem; 
+            gap: 2rem;
+            height: 10rem;
             text-transform: uppercase;
             font-weight: 400;
-            font-size: 1rem; 
-            list-style: none; 
-            padding: 0; 
-            a{
+            font-size: 1rem;
+            list-style: none;
+            padding: 0;
+
+            a {
                 text-decoration: none;
-            }
-
-            li {
-                position: relative;
-                margin: 0;
-                padding: 0.5rem 0; 
-                
-
-                &:not(:nth-child(3)):not(:nth-child(5)) {
-                    cursor: pointer;
-
-                    &::after {
-                        content: '';
-                        position: absolute;
-                        left: 0;
-                        bottom: -0.5rem; 
-                        width: 100%;
-                        height: 0.2rem; 
-                        background-color: #e7426a;
-                        transform: scaleX(0); 
-                        transform-origin: left; 
-                        transition: transform 0.3s ease; 
-                    }
-
-                    &:hover::after {
-                        transform: scaleX(1); 
-                    }
-                }
-
-               
-                &.logo {
-                    &::after {
-                        display: none;
-                    }
-                }
-
-              
-                &.catalog {
-                    &::after {
-                        display: none;
-                    }
-                }
             }
 
             .percent {
                 display: inline-block;
                 text-align: center;
-                line-height: 1.5rem; 
-                margin-left: 0.5rem; 
-                width: 1.5rem; 
-                height: 1.5rem; 
-                font-size: 1rem; 
+                line-height: 1.5rem;
+                margin-left: 0.5rem;
+                width: 1.5rem;
+                height: 1.5rem;
+                font-size: 1rem;
                 color: white;
                 border-radius: 50%;
                 background: #E7426A;
@@ -72,7 +58,7 @@
 
             .no-underline {
                 text-decoration: none;
-                color: black; 
+                color: black;
             }
         }
     }
@@ -90,8 +76,8 @@
     .headerTwo {
         &__container {
             ul {
-                flex-direction: column; 
-                gap: 1rem; 
+                flex-direction: column;
+                gap: 1rem;
             }
         }
     }
@@ -101,8 +87,8 @@
     .headerTwo {
         &__container {
             ul {
-                font-size: 0.875rem; 
-                height: auto; 
+                font-size: 0.875rem;
+                height: auto;
             }
         }
     }
