--- a/src/Pages/Delivery/Payment/Payment.scss
+++ b/src/Pages/Delivery/Payment/Payment.scss
@@ -1,4 +1,6 @@
 .payment{
+    padding: 41px 0;
+    background: #ebedee;
     &__navigate {
         max-width: 1170px;
         margin: 0 auto;
@@ -7,6 +9,7 @@
         align-items: center;
         font-size: 16px;
         margin-bottom: 20px;
+
 
         div {
             display: flex;
@@ -44,5 +47,40 @@
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+    &__left{
+        img{
+            margin-top: 100px;
+        }
+    }
+    &__right{
+        h2{
+            font-size: 42px;
+            font-weight: 600;
+            line-height: 51.2px;
+            color: #292929;
+        }
+        h3{
+            margin: 17px 0 16px;
+            font-size: 18px;
+            line-height: 23.4px;
+            color: #292929;
+            font-weight: 600;
+        }
+        h4{
+            font-size: 18px;
+            font-weight: 600;
+            line-height: 21.94px;
+            color: #292929;
+        }
+        &__text{
+            p{
+                margin-top: 10px;
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 20.8px;
+                color: #292929;
+            }
+        }
     }
 }
