--- a/src/Pages/AllClothes/AllClothes.scss
+++ b/src/Pages/AllClothes/AllClothes.scss
@@ -1,6 +1,7 @@
 .AllClothes {
     padding: 2rem 0;
     background-color: #f9f9f9;
+    margin-top: 230px;
 
     &__navigate {
         max-width: 1170px;
