--- a/src/Pages/Cart/Cart.scss
+++ b/src/Pages/Cart/Cart.scss
@@ -4,6 +4,7 @@
     font-size: 30px;
     padding: 20px 0;
 
+
     &__navigate {
         max-width: 1170px;
         margin: 0 auto;
@@ -35,6 +36,7 @@
     }
 
     &__container {
+        margin-top: 230px;
         display: flex;
         flex-direction: column;
         align-items: center;
