--- a/src/Pages/Catalog/Catalog.scss
+++ b/src/Pages/Catalog/Catalog.scss
@@ -10,6 +10,7 @@
         align-items: center;
         font-size: 16px;
         margin-bottom: 20px;
+        margin-top: 230px;
 
         div {
             display: flex;
