--- a/src/Pages/Home/Banner/Banner.scss
+++ b/src/Pages/Home/Banner/Banner.scss
@@ -3,7 +3,8 @@
     background-size: cover;
     background-position: center;
     position: relative;
-    padding: 80px 0; // Увеличьте или уменьшите по необходимости
+    padding: 80px 0;
+    // margin-top: 150px;
 
     .container-1 {
         display: flex;
@@ -20,7 +21,8 @@
         justify-content: space-between;
         max-width: 1200px;
         width: 100%;
-        margin: 0 auto;
+        margin: 230px auto 0;
+
     }
 
     &__col {
