--- a/src/Pages/OneItem/OneItem.scss
+++ b/src/Pages/OneItem/OneItem.scss
@@ -5,8 +5,6 @@
         display: flex;
         align-items: center;
         font-size: 16px;
-        margin-bottom: 20px;
-
         p {
             margin: 0;
             padding: 0;
@@ -29,6 +27,7 @@
     }
 
     &__container {
+        margin-top: 230px;
         display: flex;
         justify-content: space-around;
         background: #F7F7F7;
