--- a/src/Pages/Sets/Sets.scss
+++ b/src/Pages/Sets/Sets.scss
@@ -10,6 +10,8 @@
         align-items: center;
         font-size: 16px;
         margin-bottom: 20px;
+        margin-top: 230px;
+
 
         div {
             display: flex;
