--- a/src/Pages/Registration/Registration.scss
+++ b/src/Pages/Registration/Registration.scss
@@ -35,6 +35,7 @@
     max-width: 400px;
     width: 100%;
     text-align: center;
+
     h2 {
       font-size: 1.5rem;
       margin-bottom: 1.5rem;
@@ -76,6 +77,33 @@
       &:hover {
         background-color: #c6214a;
       }
+    }
+  }
+
+  @media (max-width: 600px) {
+    .registration {
+      padding: 1rem;
+
+      h2 {
+        font-size: 1.2rem;
+        margin-bottom: 1rem;
+      }
+
+      label {
+        input {
+          padding: 0.5rem;
+          font-size: 0.9rem;
+        }
+      }
+
+      button {
+        padding: 0.5rem;
+        font-size: 0.9rem;
+      }
+    }
+
+    .registration__close {
+      font-size: 2rem;
     }
   }
 }
